001-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp-demo
  labels:
    purpose: demo
