08-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: webapp-demo
  labels:
    app: webapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: webapp
