14-webapp-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-nodeport
  namespace: webapp-demo
  labels:
    app: webapp
spec:
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
